Fixed images vertical alignment in style1 sections

--- a/DeforaOS/Apps/Web/DaPortal/themes/DeforaOS.css
+++ b/DeforaOS/Apps/Web/DaPortal/themes/DeforaOS.css
@@ -383,6 +383,7 @@ table.bordered th {
 .style1 img {
 	padding-left:			2px;
 	padding-right:			2px;
+	vertical-align:			middle;
 }
 
 .title {
